<resources>
    <string name="app_name">AboutMe</string>
    <string name="h1">Name &amp; Last name</string>
    <string name="h2">Skills</string>
    <string name="h3">Contacts</string>
    <string name="prosto_text">Bla..bla..bla...</string>
    <string name="my_txt">Портретная ориентация</string>
    <string name="txt_btt1">Name &amp; Last name</string>
    <string name="txt_btt2">Skills</string>
    <string name="txt_btt3">Contacts</string>
    <string name="menuCopyAll">Copy All</string>
    <string name="menuCopyName">Copy Name</string>
    <string name="menuCopyContacts">Copy Contacts</string>

</resources>
